[package]
edition      = "2024"
name         = "weather-sensor"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "weather-sensor"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }

critical-section = "1.2.0"
embedded-io = "0.7.1"
esp-alloc = "0.9.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32c3",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

# My deps below.
# Logger.
log = "0.4"
esp-println = { version = "0.16.0", features = ["esp32c3", "log-04"] }
# bme280.
bme280 = "0.5.1"
embedded-hal = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
